--- a/package.json
+++ b/package.json
@@ -30,10 +30,15 @@
     "@scalar/nestjs-api-reference": "^0.3.159",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "openai": "^4.65.0",
     "prisma": "^5.20.0",
     "reflect-metadata": "^0.2.0",
     "retell-sdk": "^4.7.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "spotify-web-api-node": "^5.0.2",
+    "twilio": "^5.3.2",
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -42,6 +47,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/spotify-web-api-node": "^5.0.11",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
